<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".sname" >

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvfilename" 
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFileName"
        android:ems="14" />
    
    <TextView
        android:id="@+id/tvTrackNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFileName"
        android:text="@string/tvtracknumber"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTrackNumber"
        android:ems="10" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf= "@+id/etTrack"
        android:layout_below="@+id/tvTrackNumber"
        android:ems="4" 
        android:selectAllOnFocus="true"
        android:inputType="number" />

        <TextView
        android:id="@+id/tvOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNumber"
        android:text="@string/tvoperator" 
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/etOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOperator"
        android:layout_centerVertical="true"
        android:selectAllOnFocus="true"
        android:ems="14" />
    
</RelativeLayout>